--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container">
-            <a href="/" class="navbar-brand">Books App 123</a>
+            <a href="/" class="navbar-brand">Books App</a>
         </div>
     </nav>
 
