--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     
-                    <button class="btn btn-primary">Save</button>
+                    <button class="btn btn-primary">Save Book</button>
                 </form>
             </div>
             <div class="col-md-8" id="books-cards">
